--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -22,11 +22,17 @@ spring:
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
-  datasource: # 配置数据源
-    url: jdbc:mysql://localhost:3306/localstudy?characterEncoding=UTF-8
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: root
+  datasource: # 配置多个数据源，首先下面是第一个数据源
+    primary: # 首先是第一个数据眼
+      url: jdbc:mysql://localhost:3306/localstudy?characterEncoding=UTF-8
+      driver-class-name: com.mysql.jdbc.Driver
+      username: root
+      password: root
+    secondary: #其次是第二个数据源
+      url: jdbc:mysql://localhost:3306/localstudy_bak?characterEncoding=UTF-8 # 配置第二个数据源的url
+      driver-class-name: com.mysql.jdbc.Driver # 配置第二个数据源的driverclassname
+      username: root # 用户名
+      password: root # 密码
   jpa:
     show-sql: true
     hibernate:
