springboot使用@scheualed做定时任务

--- a/crtl/pom.xml
+++ b/crtl/pom.xml
@@ -103,6 +103,13 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
+
+        <!--引入mongodb，有待细化与开发-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
