--- a/web/src/main/resources/application-dev.yml
+++ b/web/src/main/resources/application-dev.yml
@@ -68,9 +68,7 @@ spring:
 flyway:
   baseline-on-migrate: true
   encoding: UTF-8
-# 配置那个控制器不需要输出logger
-#logging:
-#  level:
-#   控制器名: 'OFF'
+logging:
+  config: classpath:logback.xml
 
 
