--- a/pom.xml
+++ b/pom.xml
@@ -199,10 +199,17 @@
             </dependency>
 
             <!-- spring security,主要用来做md5加密 -->
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
                 <version>${spring.serurity.version}</version>
+            </dependency>-->
+
+            <!-- spring security -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${springboot.version}</version>
             </dependency>
 
             <!--spring-data-mongodb-->
