使用真正的token验证机制限制用户登录

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -50,5 +50,9 @@
             <artifactId>springfox-swagger2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
     </dependencies>
 </project>
