--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <apache.solr.version>2.1.4.RELEASE</apache.solr.version>
         <apache.common.collections>3.2.1</apache.common.collections>
         <spring.serurity.version>4.2.3.RELEASE</spring.serurity.version>
+        <jwt.version>0.6.0</jwt.version>
     </properties>
 
     <dependencyManagement>
@@ -210,6 +211,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-mongodb</artifactId>
                 <version>${springboot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jwt.version}</version>
             </dependency>
 
         </dependencies>
