--- a/crtl/pom.xml
+++ b/crtl/pom.xml
@@ -99,9 +99,14 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
+        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <!--引入mongodb，有待细化与开发-->
