--- a/pom.xml
+++ b/pom.xml
@@ -192,18 +192,24 @@
                 <version>${apache.common.collections}</version>
             </dependency>
 
-            <!--springboot aop-->
+            <!--springboot security-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-aop</artifactId>
+                <artifactId>spring-boot-starter-security</artifactId>
                 <version>${springboot.version}</version>
             </dependency>
 
             <!-- spring security,主要用来做md5加密 -->
-            <dependency>
+           <!-- <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
                 <version>${spring.serurity.version}</version>
+            </dependency>-->
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>${springboot.version}</version>
             </dependency>
 
             <!--spring-data-mongodb-->
