--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <apache.common.collections>3.2.1</apache.common.collections>
         <spring.serurity.version>4.2.3.RELEASE</spring.serurity.version>
         <jwt.version>0.6.0</jwt.version>
+        <feignClient.version>1.3.0.RELEASE</feignClient.version>
     </properties>
 
     <dependencyManagement>
@@ -223,6 +224,13 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>${jwt.version}</version>
+            </dependency>
+
+            <!--FeignClient-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-feign</artifactId>
+                <version>${feignClient.version}</version>
             </dependency>
 
         </dependencies>
