--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,12 @@
                 <version>${jwt.version}</version>
             </dependency>
 
+            <!--RabbitMQ-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-amqp</artifactId>
+                <version>${springboot.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
