--- a/web/src/main/resources/application-dev.yml
+++ b/web/src/main/resources/application-dev.yml
@@ -64,6 +64,11 @@ spring:
   data:
     solr:
       host: http://127.0.0.1:8983/solr
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: zhuhaiwen
+    password: zhuhaiwen
 # 配置flyway
 flyway:
   baseline-on-migrate: true
