--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <spring.serurity.version>4.2.3.RELEASE</spring.serurity.version>
         <jwt.version>0.6.0</jwt.version>
         <feignClient.version>1.3.0.RELEASE</feignClient.version>
+        <jedis.version>2.9.0</jedis.version>
     </properties>
 
     <dependencyManagement>
@@ -232,6 +233,14 @@
                 <artifactId>spring-boot-starter-amqp</artifactId>
                 <version>${springboot.version}</version>
             </dependency>
+
+            <!--jedis-->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
