--- a/pom.xml
+++ b/pom.xml
@@ -286,7 +286,7 @@
             </properties>
         </profile>
     </profiles>
-    <build>
+    <!--<build>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -296,5 +296,5 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-    </build>
+    </build>-->
 </project>
