--- a/web/src/main/resources/application-dev.yml
+++ b/web/src/main/resources/application-dev.yml
@@ -70,9 +70,9 @@ spring:
     username: zhuhaiwen
     password: zhuhaiwen
 # 配置flyway
-flyway:
-  baseline-on-migrate: true
-  encoding: UTF-8
+#flyway:
+#  baseline-on-migrate: true
+#  encoding: UTF-8
 logging:
   config: classpath:logback.xml
 
