删除rabbitmq以及恢复flyway

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -62,10 +62,10 @@
 		</dependency>
 
 		<!--flyway 数据库管理工具-->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-		</dependency>-->
+		</dependency>
 
 	</dependencies>
 
